Add documentation for Java and .NET language bindings
- C_BINDINGS.md: add Java/dotnet binding sections, update architecture
  diagram, document Python linkage and CMake link order decisions
- ARCHITECTURE.md: add java/, dotnet/, bindings/ to directory structure
  and architecture diagram, add to testing table
- language_bindings.md: user-facing tutorial with setup, usage examples,
  and test commands for both Java (Panama FFM) and .NET (P/Invoke)
- mkdocs.yml: add Language Bindings tutorial to nav